@@ -67,7 +67,7 @@ infixr 9   . ;			// function composition
 /* The truth values. These are just integers in Pure, but sometimes it's
    convenient to refer to them using these symbolic constants. */
 
-def false = 0; def true = 1;
+const false, true = 0, 1;
 
 /* Pull in the primitives (arithmetic etc.) and the standard string functions.
    Note that the math and system modules are *not* included here, so you have
